--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //RxJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+
+    //FirebaseUI
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
 }
