--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     testImplementation 'junit:junit:4.+'
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
 
     //material
-    implementation 'com.google.android.material:material:1.4.0'
+//    implementation 'com.google.android.material:material:1.4.0'
 
     //butterknife
     implementation 'com.jakewharton:butterknife:10.2.3'
